# Forklore

./: .env.example  Caddyfile  LICENSE  README.md  docker-compose.yml  makefile  promt.md  pyproject.toml
api-gateway/: Dockerfile  EXAMPLES.md  README.md  go.mod  go.sum  makefile
api-gateway/config/: config.go
api-gateway/docs/: docs.go  swagger.json  swagger.yaml
app/: main.py
app/core/: config.py  exceptions.py  logging.py
app/domain/: enums.py
app/graph/: main_graph.py
app/prompts/: extract_knowledge.txt  generate_flashcards.txt
app/services/: extraction_service.py  llm_client.py  review_service.py
app/storage/: in_memory_repository.py  repository.py
app/tools/: flashcard_generator.py
auth-service/: Dockerfile  entrypoint.sh  go.mod  go.sum
auth-service/config/: config.go
content-service/: Dockerfile  go.mod  go.sum
content-service/config/: config.go
frontend/: .dockerignore  Dockerfile  blob_page.txt  fix.ps1  fix_blob.ps1  fix_blob2.ps1  fix_ticks.ps1  next.config.ts  package-lock.json  package.json
pkg/pb/: go.mod  makefile
pkg/utils/: go.mod  go.sum
profile-service/: Dockerfile  entrypoint.sh  go.mod  go.sum
profile-service/config/: config.go
ranking-service/: Dockerfile  entrypoint.sh  go.mod
ranking-service/config/: config.go
repository-service/: Dockerfile  go.mod  go.sum
search-service/: Dockerfile  go.mod  go.sum
study-service/: Dockerfile  requirements.txt
tutor_search/: api.py  dictionary_loader.py  extractor.py  models.py  requirements.txt  service.py
txt_extractor/: pdf_txt_extractor.py
(+252 files in other folders)
